[build-system]
requires = ["setuptools", "wheel", "hatchling"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.setuptools.dynamic]
version = { attr = "reflex_clerk_api.__version__" }

[tool.hatch.version]
path = "custom_components/reflex_clerk_api/__init__.py"

[project]
name = "reflex-clerk-api"
description = "Reflex custom component wrapping @clerk/clerk-react and integrating the clerk-backend-api"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Tim Child", email = "timjchild@gmail.com" }]
keywords = ["reflex","reflex-custom-components", "clerk", "clerk-backend-api"]
dynamic = ["version"]

dependencies = [
    "authlib>=1.5.1,<2.0.0",
    "clerk-backend-api>=2.0.0,<3.0.0",
    "reflex>=0.7.5",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Framework :: Reflex",  # Should be added once this is accepted
]

[project.urls]
documentation = "https://timchild.github.io/reflex-clerk-api/about/"
repository = "https://github.com/TimChild/reflex-clerk-api"
issues = "https://github.com/TimChild/reflex-clerk-api/issues"
homepage = "https://reflex-clerk-api-demo.adventuresoftim.com"

[tool.pytest.ini_options]
# addopts = "--headed"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
extend-select = ["I", "RUF", "T20"]
ignore = ["RUF012"]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "dotenv>=0.9.9",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.8",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "pytest-pretty>=1.2.0",
    "ruff>=0.9.10",
    "semver>=3.0.4",
    "reflex==0.7.5",  # https://github.com/reflex-dev/reflex/issues/5114 -- Pinned until this is fixed
]
